3.X.X (2017-XX-XX)
------------------

New features
 - [web] new images viewer in Mail module
 - [eas] initial EAS v16 and email drafts support
 - [core] load-testing scripts to evaluate SOGo performance

Enhancements
 - [core] now possible to {un}subscribe to folders using sogo-tool
 - [web] AngularJS optimizations in Mail module
 - [web] AngularJS optimization of color picker
 - [web] improve display of tasks status
 - [web] added custom fields support from Thunderbird's address book
 - [web] added Latvian (lv) translation - thanks to Juris Balandis
 - [web] expose user's defaults and settings inline
 - [web] can now discard incoming mails during vacation
 - [web] support both backspace and delete keys in Mail and Contacts modules
 - [web] improved display of appointment/task comments and card notes
 - [web] updated Angular Material to version 1.1.4

Bug fixes
 - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
 - [web] fixed adding list members with multiple email addresses
 - [web] fixed responsive condition of login page (960px to 1023px)
 - [web] don't throw errors when accessing nonexistent special mailboxes (#4177)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] don't update subscriptions when owner is not the active user (#3988)
 - [core] strip cr during LDIF import process (#4172)
 - [core] email alarms are sent too many times (#4100)
 - [eas] don't include task folders if we hide them in SOGo (#4164)

3.2.9 (2017-05-09)
------------------

New features
 - [core] email alarms now have pretty formatting (#805)

Enhancements
 - [core] improved event invitation for all day events (#4145)
 - [web] improved interface refresh time with external IMAP accounts
 - [eas] added photo support for GAL search operations

Bug fixes
 - [web] fixed attachment path when inside multiple body parts
 - [web] fixed email reminder with attendees (#4115)
 - [web] prevented form to be marked dirty when changing password (#4138)